[feat]: Comando para sempre que o manga-dlp subir já baixar os mangás

--- a/1.my-config/3-CONTAINER/3.midia/3.mangas-reader/manga-dlp-docker-compose.yml
+++ b/1.my-config/3-CONTAINER/3.midia/3.mangas-reader/manga-dlp-docker-compose.yml
@@ -19,7 +19,7 @@ services:
         "-l",
         "pt-br",
         "--chapters",
-        "1-112",
+        "all",
         "--format",
         "cbz",
       ]
