[refactor]: Troca local para onde os scripts do set-headset-max vão

--- a/1.my-config/2-LINUX/2.services/1.headeset-service/set-headset-max-volume.service
+++ b/1.my-config/2-LINUX/2.services/1.headeset-service/set-headset-max-volume.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Set headset volume if headset was plugged
-After=sound.target
+Description=Ajuste de volume para o Fuxi-H3
+After=pipewire.service
 
 [Service]
-Type=oneshot
-ExecStart=/usr/lib/systemd/scripts/set-headset-max-volume.sh
+ExecStart=/home/vinicius/.config/systemd/user/scripts/set-headset-max-volume.sh
+Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
