--- a/1.my-config/3-CONTAINER/2.dns/1.pi-hole/dns-docker-compose.yml
+++ b/1.my-config/3-CONTAINER/2.dns/1.pi-hole/dns-docker-compose.yml
@@ -1,19 +1,19 @@
 services:
-  pihole:
-    container_name: pihole
-    hostname: pihole
-    image: pihole/pihole:latest
-    network_mode: host
-    environment:
-      TZ: "America/Sao_Paulo"
-      WEBPASSWORD: ${PASSWORD}
-      DNSMASQ_LISTENING: local
-      FTLCONF_webserver_api_password: ${PASSWORD}
-      PIHOLE_DNS_: "127.0.0.1#5053" 
-    volumes:
-      - "~/.docker/pi-hole/etc-pihole:/etc/pihole"
-      - "~/.docker/pi-hole/etc-dnsmasq.d:/etc/dnsmasq.d"
-    restart: unless-stopped
+ # pihole:
+ #   container_name: pihole
+ #   hostname: pihole
+ #   image: pihole/pihole:latest
+ #   network_mode: host
+ #   environment:
+ #     TZ: "America/Sao_Paulo"
+ #     WEBPASSWORD: ${PASSWORD}
+ #     DNSMASQ_LISTENING: local
+ #     FTLCONF_webserver_api_password: ${PASSWORD}
+ #     PIHOLE_DNS_: "127.0.0.1#5053" 
+ #   volumes:
+ #     - "~/.docker/pi-hole/etc-pihole:/etc/pihole"
+ #     - "~/.docker/pi-hole/etc-dnsmasq.d:/etc/dnsmasq.d"
+ #   restart: unless-stopped
 
   unbound:
     container_name: unbound
