--- a/1.my-config/3-CONTAINER/3.midia/3.mangas-reader/2.manga-dlp-option/manga-dlp-docker-compose.yml
+++ b/1.my-config/3-CONTAINER/3.midia/3.mangas-reader/2.manga-dlp-option/manga-dlp-docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ~/.docker/mangas/manga-dlp/downloads:/app/downloads/
       - ~/.docker/mangas/manga-dlp/mangas.txt:/app/mangas.txt
-      - TZ=America/Sao_Paulo
+      # - TZ=America/Sao_Paulo
     restart: unless-stopped
 
   komga:
