--- a/1.my-config/3-CONTAINER/1.portainer/portainer-docker-compose.yml
+++ b/1.my-config/3-CONTAINER/1.portainer/portainer-docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "9443:9443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/run/podman/podman.sock:/var/run/docker.sock"
       - "data:/data"
     networks:
       net:
