--- a/dotfiles/dotfiles-containers/3.midia/3.mangas-reader/2.manga-dlp-komga/manga-dlp-docker-compose.yml
+++ b/dotfiles/dotfiles-containers/3.midia/3.mangas-reader/2.manga-dlp-komga/manga-dlp-docker-compose.yml
@@ -7,8 +7,8 @@ services:
     networks:
       - manga-net
     volumes:
-      - ~/.docker/mangas/manga-dlp/downloads:/app/downloads/
-      - ~/.docker/mangas/manga-dlp/mangas.txt:/app/mangas.txt
+      - ~/.docker/mangas/downloads:/app/downloads/
+      - ~/.docker/mangas/containers/manga-dlp/mangas.txt:/app/mangas.txt
     environment:
       - TZ=America/Sao_Paulo
     restart: unless-stopped
@@ -22,12 +22,12 @@ services:
     ports:
       - "25600:25600"
     volumes:
-      - ~/.docker/mangas/komga/config:/config
-      - ~/.docker/mangas/manga-dlp/downloads:/data
+      - ~/.docker/mangas/containers/komga/config:/config
+      - ~/.docker/mangas/downloads:/data
     environment:
       - TZ=America/Sao_Paulo
     restart: unless-stopped
-  
+
 networks:
   manga-net:
     name: mangadlp
