--- a/dotfiles/dotfiles-containers/3.midia/3.mangas-reader/2.manga-dlp-komga/manga-dlp-docker-compose.yml
+++ b/dotfiles/dotfiles-containers/3.midia/3.mangas-reader/2.manga-dlp-komga/manga-dlp-docker-compose.yml
@@ -25,7 +25,28 @@ services:
       - ~/.docker/mangas/containers/komga/config:/config
       - ~/.docker/mangas/downloads:/data
     environment:
+      - KOMGA_CORS_ALLOWED_ORIGINS=http://localhost:8085,http://komf:8085
       - TZ=America/Sao_Paulo
+    restart: unless-stopped
+
+  komf:
+    image: sndxr/komf:latest
+    container_name: komf
+    user: "1000:1000"
+    ports:
+    - "8085:8085"
+    environment:
+      - KOMF_KOMGA_BASE_URI=http://komga:25600 
+      - KOMF_KOMGA_USER=${KOMF_KOMGA_USER}
+      - KOMF_KOMGA_PASSWORD=${KOMF_KOMGA_PASSWORD}
+      - KOMF_LOG_LEVEL=INFO
+      - JAVA_TOOL_OPTIONS=-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:ShenandoahGuaranteedGCInterval=3600000 -XX:TrimNativeHeapInterval=3600000
+    volumes:
+      - ~/.docker/mangas/containers/komf:/config
+    networks:
+      - manga-net
+    depends_on:
+      - komga
     restart: unless-stopped
 
 networks:
