--- a/configuration/linux/setup/docker/midia/mangas/2.manga-dlp-komga/manga-dlp-docker-compose.yml
+++ b/configuration/linux/setup/docker/midia/mangas/2.manga-dlp-komga/manga-dlp-docker-compose.yml
@@ -7,8 +7,8 @@ services:
     networks:
       - manga-net
     volumes:
-      - ~/.docker/mangas/downloads:/app/downloads/
-      - ~/.docker/mangas/containers/manga-dlp/mangas.txt:/app/mangas.txt
+      - ~/docker/mangas/downloads:/app/downloads/
+      - ~/docker/mangas/containers/manga-dlp/mangas.txt:/app/mangas.txt
     environment:
       - TZ=America/Sao_Paulo
     restart: unless-stopped
@@ -22,8 +22,8 @@ services:
     ports:
       - "25600:25600"
     volumes:
-      - ~/.docker/mangas/containers/komga/config:/config
-      - ~/.docker/mangas/downloads:/data
+      - ~/docker/mangas/containers/komga/config:/config
+      - ~/docker/mangas/downloads:/data
     environment:
       - KOMGA_CORS_ALLOWED_ORIGINS=http://localhost:8085,http://komf:8085
       - TZ=America/Sao_Paulo
@@ -43,7 +43,7 @@ services:
       - KOMF_LOG_LEVEL=DEBUG
       - JAVA_TOOL_OPTIONS=-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:ShenandoahGuaranteedGCInterval=3600000 -XX:TrimNativeHeapInterval=3600000
     volumes:
-      - ~/.docker/mangas/containers/komf:/config
+      - ~/docker/mangas/containers/komf:/config
     networks:
       - manga-net
     depends_on:
