[feat]: Adiciona script para print com grim e som do sistema.

--- a/configuration/linux/.dotfiles/autostart/set-headset-max-volume.desktop
+++ b/configuration/linux/.dotfiles/autostart/set-headset-max-volume.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=/home/vinicius/.config/systemd/user/set-headset-max-volume.service
+Exec=/home/vinicius/.config/systemd/user/set-headset-max-volume.sh
 Hidden=false
 NoDisplay=false
 X-GNOME-Autostart-enabled=true
