[fixed]: Corrige bind para alt + tab no hyprland.

--- a/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
@@ -1,3 +1,7 @@
+windowrulev2 = size 1000 800, class:^(thunar)$
+windowrulev2 = float, class:^(thunar)$
+windowrulev2 = center, class:^(thunar)$
+
 windowrulev2 = size 800 600, class:^(kitty)$, title:^(nmtui)$
 windowrulev2 = float, class:^(kitty)$, title:^(nmtui)$
 windowrulev2 = center, class:^(kitty)$, title:^(nmtui)$
