--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -31,7 +31,7 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = ALT, TAB, cyclenext
+bind = ALT, TAB, cyclenext, prev, tiled, visible, hist
 
 # --- Workspace: seleção e movimentação ---
 bind = $mainMod, 1, workspace, 1
