[fixed]: Corrige de uma vez por todas o erro de fazer alt+tab sem pop ups.

--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -31,7 +31,7 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = ALT, TAB, cyclenext, prev, tiled, visible, hist
+bind = ALT, TAB, cyclenext, prev, tiled
 
 # --- Workspace: seleção e movimentação ---
 bind = $mainMod, 1, workspace, 1
