--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,3 +1,4 @@
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
