--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,4 +1,8 @@
+source = ~/.config/hypr/enviroment.conf
+
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once =  $script_dir/start_ssh_agent.sh
+
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
