[feat]: Remove script  e adiciona o keychain para carregar o agente ssh.

--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,7 +1,5 @@
-source = ~/.config/hypr/enviroment.conf
-
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once =  $script_dir/start_ssh_agent.sh
+exec-once = bash -c 'eval $(keychain --eval id_ed25519)'
 
 exec-once = hypridle
 exec-once = waybar
@@ -11,4 +9,3 @@ exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
 exec-once = hyprctl plugin load $HOME/.local/share/hyprpm/dynamic-cursors/dynamic-cursors.so
-
