[fixed]: Correção do exec-once para iniciar o ssh-agent.

--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,5 +1,6 @@
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = bash -c 'eval $(keychain --eval id_ed25519)'
+exec-once = eval (ssh-agent -c | source)
+exec-once = ssh-add ~/.ssh/id_ed25519
 
 exec-once = hypridle
 exec-once = waybar
