[feat]: Insere script para pedir senha ssh para usuário via interface.

--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -72,13 +72,13 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # --- Screenshots ---
-bind = CTRL, Print, exec, hyprshot -m region -o  $screenshot_dir
-bind = , Print, exec, hyprshot -m window -o $screenshot_dir
-bind = ALT, Print, exec, hyprshot -m active -m output -o $screenshot_dir
+bind = CTRL, Print, exec, hyprshot -m region -o  $screenshotDir
+bind = , Print, exec, hyprshot -m window -o $screenshotDir
+bind = ALT, Print, exec, hyprshot -m active -m output -o $screenshotDir
 
 # --- Outros ---
 bind = ALT, ESCAPE, exec, wlogout -b 2
-bind = ALT, W, exec, $script_dir/wallpaper.sh
-bind = ALT, A, exec, $script_dir/refresh_waybar.sh
-bind = ALT, B, exec, $script_dir/select_waybar.sh
-bind = ALT, R, exec, $script_dir/refresh_swaync.sh
+bind = ALT, W, exec, $scriptDir/wallpaper.sh
+bind = ALT, A, exec, $scriptDir/refresh_waybar.sh
+bind = ALT, B, exec, $scriptDir/select_waybar.sh
+bind = ALT, R, exec, $scriptDir/refresh_swaync.sh
