--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -1,8 +1,8 @@
 # Chamar somente nos internos e não no hyprland.conf
 
 # PATH
-$screenshot_dir = ~/Pictures/Screenshot
-$script_dir = ~/.config/hypr/script
+$screenshotDir = ~/Pictures/Screenshot
+$scriptDir = ~/.config/hypr/script
 
 # APPS
 $terminal = kitty
