--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,6 +1,7 @@
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = eval (ssh-agent -c | source)
-exec-once = ssh-add ~/.ssh/id_ed25519
+source = ~/.config/hypr/enviroment.conf
+
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = $scriptDir/start_ssh_agent.sh
 
 exec-once = hypridle
 exec-once = waybar
