[feat]: Modifica script de print para pegar só a janela em foco e delay para sumir a notificação, adiciona ao zed formatador de shell.

--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -19,10 +19,11 @@ bind = $mainMod, V, togglefloating
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
 bind = $mainMod, M, fullscreen, 1
-bind = ALT, left, movewindow, l
-bind = ALT, right, movewindow, r
-bind = ALT, up, movewindow, u
-bind = ALT, down, movewindow, d
+bind = $mainMod SHIFT, M, fullscreen, 0
+# bind = ALT, left, movewindow, l
+# bind = ALT, right, movewindow, r
+# bind = ALT, up, movewindow, u
+# bind = ALT, down, movewindow, d
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
@@ -74,7 +75,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # --- Screenshots ---
 bind = CTRL, Print, exec, hyprshot -m region -o  $screenshotDir
 bind = , Print, exec, hyprshot -m window -o $screenshotDir
-bind = ALT, Print, exec, hyprshot -m active -m output -o $screenshotDir
+# bind = ALT, Print, exec, hyprshot -m active -m output -o $screenshotDir
+bind = ALT, Print, exec, $scriptDir/screenshot_activity_window.sh
 
 # --- Outros ---
 bind = ALT, ESCAPE, exec, wlogout -b 2
