--- a/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
@@ -1,3 +1,7 @@
+windowrulev2 = tag +jb, class:^jetbrains-.+$,floating:1
+windowrulev2 = stayfocused, tag:jb
+windowrulev2 = noinitialfocus, tag:jb
+
 windowrulev2 = size 1000 800, class:^(thunar)$
 windowrulev2 = float, class:^(thunar)$
 windowrulev2 = center, class:^(thunar)$
