--- a/configuration/linux/.dotfiles/hypr/conf/decoration.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/decoration.conf
@@ -10,11 +10,11 @@ decoration {
         new_optimizations = true
         ignore_opacity = true
         xray = false
-        popups = true
+        popups = false
     }
     shadow {
         enabled = true
-        range = 15
+        range = 10
         render_power = 5
         color = rgba(0,0,0,.5)
     }
