--- a/configuration/linux/.dotfiles/zed/settings.json
+++ b/configuration/linux/.dotfiles/zed/settings.json
@@ -1,11 +1,3 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette (cmd-shift-p / ctrl-shift-p)
 {
   "vim_mode": false,
   "icon_theme": "Material Icon Theme",
@@ -51,7 +43,8 @@
         }
       },
       "prettier": {
-        "allowed": true
+        "allowed": true,
+        "parser": "jsonc"
       }
     },
     "TypeScript": {
@@ -64,6 +57,14 @@
       "prettier": {
         "allowed": true,
         "parser": "typescript"
+      }
+    },
+    "Shell Script": {
+      "formatter": {
+        "external": {
+          "command": "shfmt",
+          "arguments": ["-i", "4", "-ci"]
+        }
       }
     }
   }
