[feat]: Remove a necessidade do script para iniciar o ssh agent e define duas novas váriveis que a senha vai ser pedida para o ksshaskpass

--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -11,7 +11,9 @@ $menu = wofi -n
 $browser = google-chrome-stable
 
 # SYSTEM ENV
-env = GTK_THEME=Materia-dark-compact
+env = SSH_ASKPASS,/usr/bin/ksshaskpass
+env = SSH_ASKPASS_REQUIRE,prefer
+env = GTK_THEME,Materia-dark-compact
 
 # GDK
 env = GDK_SCALE,1
