--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,7 +1,7 @@
 source = ~/.config/hypr/enviroment.conf
 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = $scriptDir/start_ssh_agent.sh
+exec-once = eval $(ssh-agent)
 
 exec-once = hypridle
 exec-once = waybar
