--- a/configuration/linux/.dotfiles/hypr/conf/decoration.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/decoration.conf
@@ -5,11 +5,12 @@ decoration {
     fullscreen_opacity = 1
     blur {
         enabled = true
-        size = 3
+        size = 8
         passes = 5
         new_optimizations = true
         ignore_opacity = true
-        xray = false
+        xray = true
+        special = false
         popups = false
     }
     shadow {
@@ -19,4 +20,3 @@ decoration {
         color = rgba(0,0,0,.5)
     }
 }
-
