[feat]: Configuração de novas váriaveis e windowrules para o hyprland.

--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -1,7 +1,5 @@
-source = ~/.config/hypr/enviroment.conf
-
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = eval $(ssh-agent)
+exec-once = eval $(ssh-agent -s)
 
 exec-once = hypridle
 exec-once = waybar
