--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -1,4 +1,12 @@
-source = ~/.config/hypr/enviroment.conf
+# PATH
+$screenshotDir = ~/Pictures/Screenshot
+$scriptDir = ~/.config/hypr/script
+
+# APPS
+$terminal = kitty
+$fileManager = thunar
+$menu = wofi -n
+$browser = google-chrome-stable
 
 # Modificador principal
 $mainMod = SUPER
