--- a/configuration/linux/.dotfiles/hypr/conf/decoration.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/decoration.conf
@@ -9,7 +9,7 @@ decoration {
         passes = 5
         new_optimizations = true
         ignore_opacity = true
-        xray = true
+        xray = false
         special = false
         popups = false
     }
