--- a/configuration/linux/.dotfiles/hypr/conf/keyboard.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/keyboard.conf
@@ -1,9 +1,8 @@
 input {
     kb_layout = br
     follow_mouse = 1
-    sensitivity = 0
+    mouse_refocus = true
     touchpad {
         natural_scroll = true
     }
 }
-
