--- a/configuration/linux/.dotfiles/hypr/conf/layerrule.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/layerrule.conf
@@ -3,6 +3,8 @@ layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
 layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
