--- a/configuration/linux/.dotfiles/hypr/conf/misc.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/misc.conf
@@ -1,5 +1,14 @@
-misc {
-    force_default_wallpaper = -1
-    disable_hyprland_logo = true
-    focus_on_activate = true
+dwindle {
+    pseudotile = true
+    preserve_split = true
+}
+
+gestures {
+    workspace_swipe = false
+}
+
+binds {
+  workspace_back_and_forth = true
+  allow_workspace_cycles = true
+  pass_mouse_when_bound = false
 }
