--- a/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
@@ -1,6 +1,16 @@
-windowrulev2 = tag +jb, class:^jetbrains-.+$,floating:1
+windowrulev2 = noblur, class:^()$, title:^()$
+
+windowrulev2 = tag +jb, class:^jetbrains-.+$, floating:1
 windowrulev2 = stayfocused, tag:jb
+windowrulev2 = noblur, tag:jb
+windowrulev2 = noanim, tag:jb
+windowrulev2 = noshadow, tag:jb
+windowrulev2 = nodim, tag:jb
 windowrulev2 = noinitialfocus, tag:jb
+
+windowrulev2 = size 1000 800, class:^(org.gnome.Loupe)$
+windowrulev2 = float, class:^(org.gnome.Loupe)$
+windowrulev2 = center, class:^(org.gnome.Loupe)$
 
 windowrulev2 = size 1000 800, class:^(thunar)$
 windowrulev2 = float, class:^(thunar)$
