--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -1,18 +1,9 @@
-# Chamar somente nos internos e não no hyprland.conf
-
-# PATH
-$screenshotDir = ~/Pictures/Screenshot
-$scriptDir = ~/.config/hypr/script
-
-# APPS
-$terminal = kitty
-$fileManager = thunar
-$menu = wofi -n
-$browser = google-chrome-stable
-
 # SYSTEM ENV
 env = SSH_ASKPASS,/usr/bin/ksshaskpass
 env = SSH_ASKPASS_REQUIRE,prefer
+env = SSH_AUTH_SOCK,"$XDG_RUNTIME_DIR"/ssh-agent.socket
+
+# GTK
 env = GTK_THEME,Materia-dark-compact
 
 # GDK
@@ -24,7 +15,7 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # QT
-env = QT_STYLE_OVERRIDE=kvantum
+env = QT_STYLE_OVERRIDE=kvantum qt6ct
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
