--- a/configuration/linux/.dotfiles/hypr/hyprland.conf
+++ b/configuration/linux/.dotfiles/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 source = /home/$USER/.cache/wal/colors-hyprland
 
+source = ~/.config/hypr/enviroment.conf
+
 $conf = ~/.config/hypr/conf
 
 source = $conf/monitor.conf
@@ -7,7 +9,6 @@ source = $conf/autostart.conf
 source = $conf/binding.conf
 source = $conf/animation.conf
 source = $conf/decoration.conf
-source = $conf/devices.conf
 source = $conf/layerrule.conf
 source = $conf/plugin.conf
 source = $conf/misc.conf
