--- a/configuration/linux/.dotfiles/swaync/config.json
+++ b/configuration/linux/.dotfiles/swaync/config.json
@@ -1,11 +1,11 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "left",
-  "positionY": "bottom",
+  "positionY": "top",
   "layer": "overlay",
   "control-center-layer": "top",
   "layer-shell": true,
-  "cssPriority": "application",
+  "cssPriority": "user",
   "control-center-width": 350,
   "control-center-margin-top": 8,
   "control-center-margin-bottom": 8,
@@ -13,28 +13,20 @@
   "control-center-margin-left": 8,
   "notification-2fa-action": true,
   "notification-inline-replies": true,
-  "notification-window-width": 350,
-  "notification-icon-size": 60,
-  "notification-body-image-height": 180,
-  "notification-body-image-width": 180,
-  "timeout": 12,
-  "timeout-low": 6,
+  "notification-window-width": 500,
+  "timeout": 6,
+  "timeout-low": 3,
   "timeout-critical": 1,
   "fit-to-screen": true,
   "keyboard-shortcuts": true,
-  "image-visibility": "when available",
+  "notification-body-image-height": 180,
+  "notification-body-image-width": 200,
+  "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
   "script-fail-notify": true,
-  "widgets": [
-    "mpris",
-    "title",
-    "notifications",
-    "volume",
-    "backlight",
-    "buttons-grid"
-  ],
+  "widgets": ["mpris", "title", "notifications", "buttons-grid"],
   "widget-config": {
     "title": {
       "text": "Notification Center",
@@ -45,17 +37,7 @@
       "max-lines": 1,
       "text": "Notification Center!"
     },
-
-    "mpris": {
-      "image-size": 80,
-      "image-radius": 0
-    },
-    "volume": {
-      "label": "󰕾 "
-    },
-    "backlight": {
-      "label": "󰃟 "
-    },
+    "mpris": {},
     "buttons-grid": {
       "actions": [
         {
