[feat]: Novas configurações para ambiente hyprland.

--- a/configuration/linux/.dotfiles/hypr/hyprland.conf
+++ b/configuration/linux/.dotfiles/hypr/hyprland.conf
@@ -2,6 +2,7 @@ source = /home/$USER/.cache/wal/colors-hyprland
 
 source = ~/.config/hypr/enviroment.conf
 
+$qsConfig = ii
 $conf = ~/.config/hypr/conf
 
 source = $conf/monitor.conf
