--- a/configuration/linux/.dotfiles/kitty/current-theme.conf
+++ b/configuration/linux/.dotfiles/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c6c6c7
-background         #1d1b22
+foreground         #c3c1c1
+background         #120808
 background_opacity 1.0
-cursor             #c6c6c7
+cursor             #c3c1c1
 
-active_tab_foreground     #1d1b22
-active_tab_background     #c6c6c7
-inactive_tab_foreground   #c6c6c7
-inactive_tab_background   #1d1b22
+active_tab_foreground     #120808
+active_tab_background     #c3c1c1
+inactive_tab_foreground   #c3c1c1
+inactive_tab_background   #120808
 
-active_border_color   #c6c6c7
-inactive_border_color #1d1b22
-bell_border_color     #346b94
+active_border_color   #c3c1c1
+inactive_border_color #120808
+bell_border_color     #5b4033
 
-color0       #1d1b22
-color8       #6a6177
-color1       #346b94
-color9       #468FC6
-color2       #49729d
-color10      #6299D2
-color3       #736f81
-color11      #9A94AD
-color4       #9b878e
-color12      #CFB4BE
-color5       #74829f
-color13      #9BAED4
-color6       #849aaf
-color14      #B0CEEA
-color7       #97949e
-color15      #c6c6c7
+color0       #120808
+color8       #6a5757
+color1       #5b4033
+color9       #7A5645
+color2       #632c1c
+color10      #843B26
+color3       #65472a
+color11      #875F39
+color4       #6d5339
+color12      #926F4C
+color5       #6d5342
+color13      #926F58
+color6       #7d6851
+color14      #A78B6C
+color7       #968c8c
+color15      #c3c1c1
