--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -2,7 +2,8 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = eval $(ssh-agent -s)
 
 exec-once = hypridle
-exec-once = waybar
+# exec-once = waybar
+exec-once = quickshell
 exec-once = swww-daemon
 exec-once = swaync
 exec-once = pypr
