--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -89,6 +89,7 @@ bind = ALT, Print, exec, $scriptDir/screenshot_activity_window.sh
 # --- Outros ---
 bind = ALT, ESCAPE, exec, wlogout -b 2
 bind = ALT, W, exec, $scriptDir/wallpaper.sh
-bind = ALT, A, exec, $scriptDir/refresh_waybar.sh
+# bind = ALT, A, exec, $scriptDir/refresh_waybar.sh
+bind = ALT, A, exec, $scriptDir/refresh_quickshell.sh
 bind = ALT, B, exec, $scriptDir/select_waybar.sh
 bind = ALT, R, exec, $scriptDir/refresh_swaync.sh
