--- a/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/windowrule.conf
@@ -1,25 +1,42 @@
 windowrulev2 = noblur, class:^()$, title:^()$
+windowrulev2 = norounding, class:^()$, title:^()$
 
 windowrulev2 = tag +jb, class:^jetbrains-.+$, floating:1
-windowrulev2 = stayfocused, tag:jb
-windowrulev2 = noblur, tag:jb
-windowrulev2 = noanim, tag:jb
-windowrulev2 = noshadow, tag:jb
-windowrulev2 = nodim, tag:jb
 windowrulev2 = noinitialfocus, tag:jb
+windowrulev2 = stayfocused, tag:jb
+windowrulev2 = noshadow, tag:jb
+windowrulev2 = noanim, tag:jb
+windowrulev2 = noblur, tag:jb
+windowrulev2 = nodim, tag:jb
 
 windowrulev2 = size 1000 800, class:^(org.gnome.Loupe)$
-windowrulev2 = float, class:^(org.gnome.Loupe)$
-windowrulev2 = center, class:^(org.gnome.Loupe)$
+windowrulev2 = float, center, class:^(org.gnome.Loupe)$
 
-windowrulev2 = size 1000 800, class:^(thunar)$
-windowrulev2 = float, class:^(thunar)$
+windowrulev2 = minsize 1000 800, class:^(thunar)$
 windowrulev2 = center, class:^(thunar)$
+windowrulev2 = float, class:^(thunar)$
+
+windowrulev2 = minsize 1000 800, class:^(Thunar)$
+windowrulev2 = center, class:^(Thunar)$
+windowrulev2 = float, class:^(Thunar)$
+
+windowrulev2 = minsize 1000 800, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+
+windowrulev2 = maxsize 1000 800, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 
 windowrulev2 = size 800 600, class:^(kitty)$, title:^(nmtui)$
-windowrulev2 = float, class:^(kitty)$, title:^(nmtui)$
 windowrulev2 = center, class:^(kitty)$, title:^(nmtui)$
+windowrulev2 = float, class:^(kitty)$, title:^(nmtui)$
 
 windowrulev2 = size 800 600, class:^(blueman-manager)$
-windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = center, class:^(blueman-manager)$
+windowrulev2 = float, class:^(blueman-manager)$
+
+windowrulev2 = size 1200 600, class:^(kitty), title:^(update)$
+windowrulev2 = center, class:^(kitty), title:^(update)$
+windowrulev2 = float, class:^(kitty), title:^(update)$
+
