--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -15,7 +15,9 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # QT
-env = QT_STYLE_OVERRIDE=kvantum qt6ct
+env = QML2_IMPORT_PATH,/usr/lib/qt6/qml
+env = QML_IMPORT_PATH,/usr/lib/qt6/qml
+env = QT_STYLE_OVERRIDE,kvantum;qt6ct
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
