--- a/configuration/linux/.dotfiles/waybar/config.jsonc
+++ b/configuration/linux/.dotfiles/waybar/config.jsonc
@@ -3,9 +3,9 @@
   "layer": "top",
   "position": "top",
   "reload_style_on_change": true,
-  "modules-left": ["custom/notification", "clock", "custom/pacman", "tray"],
+  "modules-left": ["custom/notification", "clock", "custom/pacman"],
   "modules-center": ["hyprland/workspaces"],
-  "modules-right": ["group/expand", "bluetooth", "network", "battery"],
+  "modules-right": ["bluetooth", "network"],
 
   "custom/notification": {
     "tooltip": false,
