[feat]: Adiciona novas configurações e organiza antigas que não são mais usadas.

--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -91,5 +91,5 @@ bind = ALT, ESCAPE, exec, wlogout -b 2
 bind = ALT, W, exec, $scriptDir/wallpaper.sh
 # bind = ALT, A, exec, $scriptDir/refresh_waybar.sh
 bind = ALT, A, exec, $scriptDir/refresh_quickshell.sh
-bind = ALT, B, exec, $scriptDir/select_waybar.sh
+# bind = ALT, B, exec, $scriptDir/select_waybar.sh
 bind = ALT, R, exec, $scriptDir/refresh_swaync.sh
