--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -2,6 +2,8 @@
 env = SSH_ASKPASS,/usr/bin/ksshaskpass
 env = SSH_ASKPASS_REQUIRE,prefer
 env = SSH_AUTH_SOCK,"$XDG_RUNTIME_DIR"/ssh-agent.socket
+env = EDITOR,nvim
+env = XDG_CONFIG_HOME,~/.config
 
 # GTK
 env = GTK_THEME,Materia-dark-compact
