--- a/configuration/linux/.dotfiles/qt6ct/qt6ct.conf
+++ b/configuration/linux/.dotfiles/qt6ct/qt6ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
 color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=false
-icon_theme=breeze-dark
+icon_theme=WhiteSur-dark
 standard_dialogs=default
 style=kvantum-dark
 
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\xff\xff\xfb\xc8\xff\xff\xfdq\xff\xff\xfd\xd7\0\0\x1\t\xff\xff\xfb\xc8\xff\xff\xfdq\xff\xff\xfd\xd7\0\0\x1\t\0\0\0\x1\x2\0\0\0\x4\x38\xff\xff\xfb\xc8\xff\xff\xfdq\xff\xff\xfd\xd7\0\0\x1\t)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb3\0\0\x4\x5\0\0\0\0\0\0\0\0\0\0\x3\xb3\0\0\x4\x5\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb3\0\0\x4\x5)
 
 [Troubleshooting]
 force_raster_widgets=1
