[feat]: Quickshel em c++ recebendo notificações via Dbus.

--- a/configuration/linux/.dotfiles/hypr/enviroment.conf
+++ b/configuration/linux/.dotfiles/hypr/enviroment.conf
@@ -2,8 +2,8 @@
 env = SSH_ASKPASS,/usr/bin/ksshaskpass
 env = SSH_ASKPASS_REQUIRE,prefer
 env = SSH_AUTH_SOCK,"$XDG_RUNTIME_DIR"/ssh-agent.socket
-env = EDITOR,nvim
-env = XDG_CONFIG_HOME,~/.config
+# env = EDITOR,nvim
+# env = XDG_CONFIG_HOME,~/.config
 
 # GTK
 env = GTK_THEME,Materia-dark-compact
@@ -17,9 +17,9 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # QT
-env = QML2_IMPORT_PATH,/usr/lib/qt6/qml
+#env = QML2_IMPORT_PATH,/usr/lib/qt6/qml
 env = QML_IMPORT_PATH,/usr/lib/qt6/qml
-env = QT_STYLE_OVERRIDE,kvantum;qt6ct
+#env = QT_STYLE_OVERRIDE,kvantum;qt6ct
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
