--- a/configuration/linux/.dotfiles/hypr/conf/binding.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/binding.conf
@@ -5,7 +5,7 @@ $scriptDir = ~/.config/hypr/script
 # APPS
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi -n
+# $menu = wofi -n
 $browser = google-chrome-stable
 
 # Modificador principal
@@ -14,9 +14,9 @@ $mainMod = SUPER
 # --- Bindings básicos ---
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, A, exec, bash -c "pkill -x $(basename $menu); $menu"
+# bind = $mainMod, A, exec, bash -c "pkill -x $(basename $menu); $menu"
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, L, exec, hyprlock
+# bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, SPACE, exec, pypr toggle term
 bind = $mainMod, G, exec, pypr toggle music
 bind = $mainMod, T, exec, pypr toggle taskbar
@@ -67,18 +67,18 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # --- Volume e brilho ---
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+# bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+# bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # --- Controles de mídia ---
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+# bindl = , XF86AudioNext, exec, playerctl next
+# bindl = , XF86AudioPause, exec, playerctl play-pause
+# bindl = , XF86AudioPlay, exec, playerctl play-pause
+# bindl = , XF86AudioPrev, exec, playerctl previous
 
 # --- Screenshots ---
 bind = CTRL, Print, exec, hyprshot -m region -o  $screenshotDir
@@ -87,9 +87,9 @@ bind = , Print, exec, hyprshot -m window -o $screenshotDir
 bind = ALT, Print, exec, $scriptDir/screenshot_activity_window.sh
 
 # --- Outros ---
-bind = ALT, ESCAPE, exec, wlogout -b 2
-bind = ALT, W, exec, $scriptDir/wallpaper.sh
+# bind = ALT, ESCAPE, exec, wlogout -b 2
+# bind = ALT, W, exec, $scriptDir/wallpaper.sh
 # bind = ALT, A, exec, $scriptDir/refresh_waybar.sh
-bind = ALT, A, exec, $scriptDir/refresh_quickshell.sh
+# bind = ALT, A, exec, $scriptDir/refresh_quickshell.sh
 # bind = ALT, B, exec, $scriptDir/select_waybar.sh
-bind = ALT, R, exec, $scriptDir/refresh_swaync.sh
+# bind = ALT, R, exec, $scriptDir/refresh_swaync.sh
