--- a/configuration/linux/.dotfiles/hypr/hyprland.conf
+++ b/configuration/linux/.dotfiles/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 source = /home/$USER/.cache/wal/colors-hyprland
 
 source = ~/.config/hypr/enviroment.conf
+source = ~/.config/hypr/scheme/current.conf
 
 $qsConfig = ii
 $conf = ~/.config/hypr/conf
@@ -18,3 +19,5 @@ source = $conf/general.conf
 source = $conf/gesture.conf
 source = $conf/dwindle.conf
 source = $conf/windowrule.conf
+
+source = ~/.config/hypr/scheme/caelestia.conf
