--- a/configuration/linux/.dotfiles/hypr/conf/autostart.conf
+++ b/configuration/linux/.dotfiles/hypr/conf/autostart.conf
@@ -3,9 +3,9 @@ exec-once = eval $(ssh-agent -s)
 
 exec-once = hypridle
 # exec-once = waybar
-exec-once = quickshell
+exec-once = caelestia shell -d
 exec-once = swww-daemon
-exec-once = swaync
+# exec-once = swaync
 exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
